@@ -8,11 +8,28 @@
 <para>
 
 Currently, the only &arch-title; subarchitectures that support CD-ROM
-booting are PReP (though not all systems) and New World PowerMacs.
+booting are PReP/CHRP (though not all systems) and New World PowerMacs.
 On PowerMacs, hold the <keycap>c</keycap> key, or else the combination of
 <keycap>Command</keycap>, <keycap>Option</keycap>,
 <keycap>Shift</keycap>, and <keycap>Delete</keycap>
-keys together while booting to boot from the CD-ROM.
+keys together while booting to boot from the factory default CD/DVD drive.
+
+</para><para>
+
+To boot a PowerMac from an external Firewire CD/DVD drive invoke
+Open Firmware prompt first (see <xref linkend="invoking-openfirmware"/>),
+then type
+
+<informalexample><screen>
+0 &gt; boot fw/node/sbp-2/disk:,\install\yaboot
+</screen></informalexample>
+
+for an alternative way to boot from the internal factory default CD/DVD 
+drive type
+
+<informalexample><screen>
+0 &gt; boot cd:,\install\yaboot
+</screen></informalexample>
 
 </para><para>
 
@@ -22,19 +39,6 @@ and a free-software version of this driver is not available. All
 OldWorld systems have floppy drives, so use the floppy drive to launch
 the installer, and then point the installer to the CD for the needed
 files.
-
-</para><para>
-
-If your system doesn't boot directly from CD-ROM, you can still use
-the CD-ROM to install the system. On NewWorlds, you can also use an
-OpenFirmware command to boot from the CD-ROM manually. Follow the
-instructions in <xref linkend="boot-newworld"/> for booting from
-the hard disk, except use the path to <command>yaboot</command> on the
-CD at the OF prompt, such as
-
-<informalexample><screen>
-0 &gt; boot cd:,\install\yaboot
-</screen></informalexample>
 
 </para>
   </sect2>
