@@ -66,6 +66,10 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   [ Vincent McIntyre ]
   * Mention DEBCONF_DEBUG. Closes: #668572.
 
+  [ Milan Kupcevic ]
+  * Clarify how to boot PowerMacs from external Firewire and internal
+    factory default CD/DVD drives. Closes #378119.
+
  -- Samuel Thibault <sthibault@debian.org>  Tue, 21 Feb 2012 20:47:50 +0100
 
 installation-guide (20110122) unstable; urgency=low
